Project moved to SDK 8. Changed dependecies. Database fixed. Added support to add product as ground truth image to a list. Added in Copernicus Search the option to search opposite (Sentinel1 or Sentinel2). Added in Copernicus Search redo and undo options